[fix] banner image not showing up in supergroups
(cherry picked from commit 29f8aa3b0f81be72adc2099eba7b60a52682863a)

--- a/super/assets/css/layout/_header.scss
+++ b/super/assets/css/layout/_header.scss
@@ -106,7 +106,7 @@
 
 /* Offset by height of bar, and make sure in the back */
 .super-group-header-wrap {
-	top: 44px;
+	top: -150px;
 	z-index: -100;
 }
 
